fix: some scrollbar style change

--- a/app/global.css
+++ b/app/global.css
@@ -115,3 +115,28 @@ body {
   outline: none;
   background: inherit;
 }
+
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-horizontal {
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #e5e5e5;
+  border-radius: 0%;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #a7a7a7;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #646464;
+  cursor: default;
+}
